tests/machine/x/ocaml/min_max_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/min_max_builtin.ml", line 4, characters 2-15:
4 |   print_endline min nums
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 4):
   2 | 
   3 | let () =
   4 |   print_endline min nums
   5 |   print_endline max nums
   6 | 
