tests/machine/x/ocaml/min_max_builtin.ml
let nums = [3;1;4]

let () =
  print_endline min nums
  print_endline max nums
